# qt_spreadsheet

./: CMakeLists.txt  README.md  main.cpp
docs/: README_EN.md
src/: Cell.cpp  Cell.h  Formula.cpp  Formula.h  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  Observer.h  Spreadsheet.cpp  Spreadsheet.h  Subject.h  Sum.cpp  Sum.h  UserInterface.cpp  UserInterface.h  version.h
test/: CMakeLists.txt  CellTest.cpp  MaxTest.cpp  MeanTest.cpp  MinTest.cpp  MockObserver.h  SpreadsheetTest.cpp  SumTest.cpp  UITest.cpp  runAllTests.cpp
